<resources>
    <string name="app_name">RiForum</string>
    <string name="action_settings">Settings</string>

    <string name="tab_1">推荐</string>
    <string name="tab_2">论坛</string>
    <string name="tab_3">发现</string>

    <string name="search_tab_1">帖子</string>
    <string name="search_tab_2">用户</string>

    <string name="not_login">未登录</string>
    <string name="click_to_login">点击头像登录</string>
    <string name="sign_in_hint">邮箱或手机号</string>

    <string name="sign_in_txt_left">注册账号</string>
    <string name="sign_nickname">昵称</string>
    <string name="password">密码</string>
    <string name="sign_button">注册</string>
    <string name="sign_to_login">已有账号登录</string>
    <string name="login_txt_left">用户登录</string>
    <string name="login_button">登录</string>
    <string name="login_to_sign">新用户注册</string>

    <string name="choose_plate_txt_left">选择板块</string>

    <string name="release_txt_center">发布主题</string>
    <string name="release_txt_right">发表</string>
    <string name="release_txt_plate">板块</string>
    <string name="release_title_hint">输入标题</string>
    <string name="release_content_hint">输入正文</string>

    <string name="error_account">请输入正确格式的邮箱或手机号码</string>
    <string name="sign_in_successfully">注册成功</string>
    <string name="sign_in_nickname_empty">昵称不能为空</string>
    <string name="password_error">密码长度至少大于6</string>
    <string name="sign_in_failed">注册失败，服务器异常</string>

    <string name="login_successfully">登录成功</string>
    <string name="login_failed">登录失败，服务器异常</string>

    <string name="release_failed">发布失败，请重试</string>
    <string name="release_empty">标题和正文不能为空</string>

    <string name="time_ago_just_now">刚刚</string>
    <string name="time_ago_second">1秒前</string>
    <string name="time_ago_seconds">%1$d秒前</string>
    <string name="time_ago_minute">1分钟前</string>
    <string name="time_ago_minutes">%1$d分钟前</string>
    <string name="time_ago_hour">1小时前</string>
    <string name="time_ago_hours">%1$d小时前</string>
    <string name="time_ago_day">1天前</string>
    <string name="time_ago_days">%1$d天前</string>
    <string name="time_ago_week">1星期前</string>
    <string name="time_ago_weeks">%1$d星期前</string>
    <string name="time_ago_month">1个月前</string>
    <string name="time_ago_months">%1$d个月前</string>
    <string name="time_ago_year">1年前</string>
    <string name="time_ago_years">%1$d年前</string>

    <string name="floor_master">楼主</string>

    <string name="all_comment">全部评论</string>
    <string name="comment_hint">添加评论…</string>
    <string name="comment_empty">评论不能为空</string>
    <string name="comment_failed">评论失败，请重试</string>
    
    <string name="reply">回复评论</string>

    <string name="user_info">个人资料</string>

    <string name="release_num">帖子&#160;&#160;&#160;%1$d</string>

    <string name="user_info_modify_empty">昵称</string>
    <string name="choose_gender">选择性别</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="user_nike">昵称</string>
    <string name="user_id">用户ID</string>
    <string name="account">账号</string>
    <string name="sign_in_time">注册时间</string>
    <string name="modify_avatar">修改头像</string>
    <string name="choose_picture">从相册选择</string>
    <string name="avatar_modified">修改头像成功</string>
    <string name="avatar_modify_failed">修改头像失败，请重试</string>

    <string name="user_center">个人</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="night_mode">夜间模式</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="no_camera_permission">没有相机权限</string>
    <string name="permission_camera_rationale">为应用开启相机和读写文件权限</string>
    <string name="permission_WRITE_EXTERNAL_STORAGE">为应用开启读写文件权限</string>
    <string name="button_allow">开启</string>
    <string name="button_deny">拒绝</string>
    <string name="never_ask_again">不再询问</string>\

    <string name="funny">新奇趣事</string>
    <string name="media">影音娱乐</string>
    <string name="travel">旅游出行</string>
    <string name="game">游戏电竞</string>
    <string name="daily_life">生活日常</string>
    <string name="food">美食达人</string>
    <string name="carton">动漫周边</string>
    <string name="more">查看更多</string>

    <string name="password_modify">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_new_password">确认新密码</string>
    <string name="password_different">两次输入的密码不相同</string>
    <string name="modify">修改</string>
    <string name="modify_password_successfully">修改成功</string>
    <string name="account_bind">账号绑定</string>
    <string name="email_bind">邮箱绑定</string>
    <string name="phone_bind">手机绑定</string>
    <string name="cache_clear">清除缓存</string>
    <string name="cache_clear_detail">确定清除缓存,&#160;&#160;这也将清除您的登录信息和搜索记录(下次启动生效)</string>
    <string name="version_check">检查版本</string>
    <string name="latest_version">已是最新版本</string>
    <string name="logout">登出</string>
    <string name="logout_failed">登出失败</string>
    <string name="feedback">意见反馈</string>
    <string name="email">ranli314@126.com</string>

    <string name="search_hint">用户或帖子…</string>
    <string name="search_hot">大家都在搜</string>
    <string name="search_history">搜索记录</string>
    <string name="clear_history">清除记录</string>

    <string name="search_bar_share">search_bar_share</string>

    <string name="delete">删除</string>
    <string name="sure_delete">确定要删除吗？</string>
    <string name="delete_successfully">删除成功</string>
    <string name="delete_failed">删除失败， 请重试</string>

</resources>
