<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.runly.riforum_android.ui.view.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:txt_left="@string/login_txt_left"
        app:txt_left_size="18"
        app:img_left_default="@drawable/back"
        app:img_left_width="30"
        app:img_left_height="30"
        />

    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/sign_in_hint"
        android:theme="@@style/myEditText"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:theme="@style/myEditText"
        android:inputType="textPassword" />



    <Button
        android:id="@+id/sign_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/login_button"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/colorBase"
        />

    <TextView
        android:id="@+id/to_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorBase"
        android:text="@string/login_to_sign"
        android:layout_gravity="center_horizontal"
        />





</LinearLayout>