<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete"
        android:layout_marginTop="16dp"
        android:textColor="@color/normal_content"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/sure_delete"
        android:textSize="16sp"
        android:textColor="@color/search_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/item_dividing"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/normal_content"/>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/item_dividing"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <Button
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:text="@string/sure"
            android:textColor="@color/comment_bar_dictionary"/>

    </LinearLayout>



</LinearLayout>