<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/old_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/old_password"
        android:textCursorDrawable="@drawable/edit_cursor"
        android:textColor="@color/normal_content"
        android:theme="@style/myEditText"
        android:inputType="textPassword"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/new_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/new_password"
        android:textCursorDrawable="@drawable/edit_cursor"
        android:textColor="@color/normal_content"
        android:theme="@style/myEditText"
        android:inputType="textPassword"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/sure_new_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/sure_new_password"
        android:textCursorDrawable="@drawable/edit_cursor"
        android:theme="@style/myEditText"
        android:textColor="@color/normal_content"
        android:inputType="textPassword"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/modify_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/modify"
        android:textSize="18sp"
        android:textColor="@color/normal_text"
        android:background="@color/login_button_bg"
        />

</LinearLayout>