<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_dividing" >


    <RelativeLayout
        android:id="@+id/user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setting_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_margin="24dp"
            android:src="@mipmap/avatar_default"
            android:text="@string/password_modify"
            />

        <TextView
            android:id="@+id/setting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/setting_avatar"
            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_password_modify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/user_information"
        android:background="@drawable/ripple_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/password_modify"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/arrow"
            tools:ignore="contentDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/item_dividing"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/setting_account_bind"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/setting_password_modify"
        android:background="@drawable/ripple_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/account_bind"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/arrow"
            tools:ignore="contentDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/item_dividing"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/setting_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/setting_account_bind"
        android:background="@drawable/ripple_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/cache_clear"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="24kb"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/item_dividing"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/setting_clear_cache"
        android:clickable="true"
        android:background="@drawable/ripple_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/version_check"
            />

        <TextView
            android:id="@+id/setting_version_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/item_dividing"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/setting_version"
        android:clickable="true"
        android:background="@drawable/ripple_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:text="@string/feedback"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/email"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/item_dividing"/>

    </RelativeLayout>


    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_bg"
        android:text="@string/logout"
        android:textColor="@color/comment_bar_dictionary"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>