<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_dividing"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/choose_text_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/send_comment"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:src="@mipmap/search_color_base"
                android:scaleType="fitCenter"
                tools:ignore="contentDescription"/>

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_hint"
                android:layout_marginStart="8dp"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="16sp">
            </EditText>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:text="@string/search_hot"
            android:textColor="@color/hint"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hot_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:text="@string/search_history"
            android:textColor="@color/hint"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/history_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            />



    </LinearLayout>


</android.support.v4.widget.NestedScrollView>