<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/edit_text_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.runly.riforum_android.ui.view.TopBar
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.github.runly.riforum_android.ui.view.TopBar>

            <!-- layout_marginTop="86dp" 140dp = 12dp + 74dp, 74dp为topBar的高度-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_txt_plate"
                    android:textColor="@color/gray_707070" />

                <TextView
                    android:id="@+id/which_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/release_plate_text_border"
                    android:padding="2dp"
                    android:text="新闻"
                    android:textSize="12sp" />

            </LinearLayout>

            <include layout="@layout/view_dividing_line" />

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:hint="@string/release_title_hint"
                android:textSize="14sp" />

            <include layout="@layout/view_dividing_line" />

            <com.github.runly.richedittext.RichEditText
                android:id="@+id/content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/release_content_hint"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/open_camera"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/camera"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/add_photo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:src="@mipmap/add_photo"
            tools:ignore="contentDescription" />

    </LinearLayout>

</LinearLayout>